# fridgers-backend

./: .env.template  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.claude/: settings.local.json
.github/: pull_request_template.md
deployments/api/: .dockerignore  Dockerfile  docker-compose.yml
deployments/db/: docker-compose.yml
deployments/db/migrations/: 20260208000000_create_users.up.sql  20260208000001_create_fridges.down.sql  20260208000001_create_fridges.up.sql  20260208000002_create_compartments.down.sql  20260208000002_create_compartments.up.sql  20260208000003_create_items.up.sql  20260301000000_add_auth_fields_to_users.down.sql  20260301000000_add_auth_fields_to_users.up.sql
docs/: fridgers.openapi.yaml  openapi.yaml
sources/application-business-rules/use-case/: Cargo.toml
sources/application-business-rules/use-case/src/: lib.rs
sources/apps/rest-server/: Cargo.toml
sources/apps/rest-server/src/: bin.rs
sources/domain/model/: Cargo.toml
sources/intertface/rest-service/: Cargo.toml
sources/libs/config/: Cargo.toml
sources/libs/config/src/: error.rs  lib.rs
src/apps/rest-server/: Cargo.toml
src/apps/rest-server/src/: app.rs  bin.rs  lib.rs  setup.rs
src/apps/rest-server/tests/: lib.rs
src/apps/rest-server/tests/auth/: mod.rs
src/apps/rest-server/tests/fridge/: mod.rs
src/apps/rest-server/tests/helper/: mod.rs
src/apps/rest-server/tests/user/: mod.rs
src/domain/: Cargo.toml
src/domain/src/: error.rs  lib.rs  name.rs  string.rs
src/domain/src/compartment/: compartment_id.rs  (+2 more)
src/infrastructure/config/: Cargo.toml
src/interface/rdb-gateway/: Cargo.toml
src/interface/rdb-gateway/src/: lib.rs  repository.rs
src/interface/rdb-gateway/src/dto/: compartment.rs  fridge.rs  item.rs  mod.rs  user.rs
src/interface/rdb-gateway/src/repositories/: compartment.rs  fridge.rs  item.rs  mod.rs  user.rs
src/interface/rdb-gateway/src/repository/: mod.rs  user.rs
src/interface/rest-controller/: Cargo.toml
src/interface/rest-controller/src/: lib.rs
src/interface/rest-controller/src/error/: mod.rs
src/interface/rest-controller/src/extractor/: authenticated_user.rs  bearer.rs  mod.rs
src/interface/rest-controller/src/handler/: auth.rs  compartment.rs  fridge.rs  health.rs  item.rs  mod.rs  user.rs
src/interface/rest-controller/src/route/: health.rs  user.rs
src/interface/rest-controller/src/router/: auth.rs  compartment.rs  fridge.rs  health.rs  item.rs  mod.rs  user.rs
src/interface/rest-controller/src/schema/: mod.rs
src/interface/rest-controller/src/schema/auth/login/: mod.rs  response.rs
src/interface/rest-controller/src/schema/compartment/create/: mod.rs  request.rs  response.rs
src/interface/rest-controller/src/schema/compartment/update/: mod.rs  request.rs  response.rs
src/interface/rest-controller/src/schema/fridge/create/: mod.rs  request.rs  response.rs
src/interface/rest-controller/src/schema/fridge/get/: mod.rs  response.rs
src/interface/rest-controller/src/schema/fridge/list/: mod.rs  response.rs
src/interface/rest-controller/src/schema/item/create/: mod.rs  request.rs  response.rs
src/interface/rest-controller/src/schema/item/update/: mod.rs  request.rs  response.rs
src/interface/rest-controller/src/schema/user/register/: mod.rs  request.rs  response.rs
src/use-case/: Cargo.toml
src/use-case/src/: auth.rs  error.rs  lib.rs  repository.rs
(+45 files in other folders)
