[workspace]
resolver = "3"
members = [
    "src/apps/rest-server"
]

[workspace.dependencies]
# 外部ライブラリ
actix-http = { version = "3.11.*" }
actix-web = { version = "4.12.*" }
dotenvy = { version = "0.15.*" }
envy = { version = "0.4.*" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
strum_macros = { version = "0.27.*" }
tracing = { version = "0.1.44" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.22" }
sqlx = { version = "0.8.*", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.20.*", features = ["serde", "v4"] }

# ワークスペース内クレート
fridgers-backend-config = { path = "src/infrastructure/config" }
fridgers-backend-domain = { path = "src/domain" }
fridgers-backend-use-case = { path = "src/use-case" }
rest-controller = { path = "src/interface/rest-controller" }
