[package]
name = "fridgers-backend-rest-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rest-server"
path = "src/bin.rs"

[dependencies]
fridgers-backend-config = { path = "../../infrastructure/config" }

actix-http = "3.11.*"
actix-web = "4.12.*"
tracing-subscriber = "0.3.22"
tracing = "0.1.43"
tracing-log = "0.2.0"
