[package]
name = "fridgers-backend-rest-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rest-server"
path = "src/bin.rs"

[dependencies]
fridgers-backend-config = { workspace = true }
fridgers-backend-use-case = { workspace = true }
rdb-gateway = { path = "../../interface/rdb-gateway" }
rest-controller = { workspace = true }

actix-http = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
