[package]
name = "fridgers-backend-rest-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rest-server"
path = "src/bin.rs"

[dependencies]
fridgers-backend-config = { workspace = true }
fridgers-backend-use-case = { workspace = true }
rdb-gateway = { path = "../../interface/rdb-gateway" }
rest-controller = { workspace = true }

actix-http = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "integration_test"
path = "tests/lib.rs"

[dev-dependencies]
actix-rt = "2"
serde_json = { workspace = true }
uuid = { workspace = true }
