[package]
name = "rest-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
fridgers-backend-domain = { workspace = true }
fridgers-backend-use-case = { workspace = true }
rdb-gateway = { path = "../rdb-gateway" }

actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
